Loqate/main/default/objects/PostcodeAnywhereSettings__c/PostcodeAnywhereSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Postcode Anywhere Settings</label>
</CustomObject>