Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/Address_Validation__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Address Validation</label>
    <type>Checkbox</type>
</CustomField>