Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/CountryByIP__c.field-meta.xml
<CustomField>
    <fullName>CountryByIP__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If set, the app will attempt to set the country based upon user location</inlineHelpText>
    <label>Set Country By IP</label>
    <type>Checkbox</type>
</CustomField>