Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/CustomFieldNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomFieldNumber__c</fullName>
    <label>CustomFieldNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>