Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/Email_Validation__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Validation</label>
    <type>Checkbox</type>
</CustomField>