Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <inlineHelpText>Your Postcode Anywhere API Key suitable for internal web service transactions. It should be in the format AA11-AA11-AA11-AA11.</inlineHelpText>
    <label>Key</label>
    <length>19</length>
    <type>Text</type>
</CustomField>