Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/Mobile_Validation__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mobile Validation</label>
    <type>Checkbox</type>
</CustomField>