Loqate/main/default/objects/PostcodeAnywhereSettings__c/fields/ShowSetupSplash__c.field-meta.xml
<CustomField>
    <fullName>ShowSetupSplash__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ShowSetupSplash</label>
    <type>Checkbox</type>
</CustomField>